# ctp-sys

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  build.rs  wrapper.cpp  wrapper.hpp
.github/workflows/: rust.yml
ctp/v6.6.5_20210924/linux_x64/: ThostFtdcMdApi.h  ThostFtdcTraderApi.h  ThostFtdcUserApiDataType.h  ThostFtdcUserApiStruct.h
ctp/v6.6.5_20210924/win_x64/: ThostFtdcMdApi.h  ThostFtdcTraderApi.h  ThostFtdcUserApiDataType.h  ThostFtdcUserApiStruct.h  error.dtd  error.xml
examples/: ctp_version.rs  md_api.rs
src/: bindings.rs  ffi_utils.rs  lib.rs  md_impl.rs  trade_impl.rs
