[package]
name = "ctp-sys"
version = "0.1.1"
edition = "2021"
repository = "https://github.com/daedalus2022/ctp-sys"
keywords = ["stock", "quantization", "futures", "ctp"]
categories = ["quantization"]
rust-version = "1.73.0"
readme = "README.md"
description = "ctp rust binding"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"


[build-dependencies]
bindgen = "0.69" # FFI rust-bindgen
