[package]
name = "ctp-sys"
version = "0.1.2"
edition = "2021"
repository = "https://github.com/daedalus2022/ctp-sys"
keywords = ["stock", "quantization", "futures", "ctp"]
categories = ["quantization"]
rust-version = "1.73.0"
readme = "README.md"
description = "ctp rust binding"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1"
env_logger = "0.8.1"
chrono = "0.4.19"
encoding = "0.2.33"
memchr = "2.3.3"
simple-error = "0.2.1"
time = "0.1.43"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0.117"
futures = "0.3.5"
bincode = { version = "2.0.0-rc.2", features = ["derive"] }

# [dev-dependencies]
tracing = "0.1.34"
tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }

[build-dependencies]
bindgen = "0.69" # FFI rust-bindgen
regex = "1.4.1"
copy_to_output = "2.0.0"
clang-sys = { version = "1", features = ["clang_6_0", "runtime"] }
clang = "2.0.0"
encoding = "0.2.33"
Inflector = "*"
libc = { version = "0.2.39", default-features = false }
